{
    "name": "Input",
    "maps": [
        {
            "name": "VRiskExperienceInputMap",
            "id": "5e1e67e7-5ece-4866-91f1-ed181fb0a924",
            "actions": [
                {
                    "name": "Move(Key/Stick)",
                    "type": "Value",
                    "id": "da85b0a9-3f2f-42a7-a561-54dbc31626eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move(Left_Hand)",
                    "type": "Value",
                    "id": "bf24ebfe-6159-49ae-a9a2-7719e326feee",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move(Right_Hand)",
                    "type": "Value",
                    "id": "e4e8096c-7042-41c0-8d61-78d43282b789",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateView",
                    "type": "Value",
                    "id": "525df89a-6a02-4f38-bf2b-696098166f5d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeadMoved",
                    "type": "Value",
                    "id": "e30677f2-09ef-42b5-959a-31e3d1211ce0",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "5e7f13b5-9339-49a7-9553-3cd787378f81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact(Left_Hand)",
                    "type": "Button",
                    "id": "8dbb3863-f493-4af7-9b96-99da8e8f4315",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact(Right_Hand)",
                    "type": "Button",
                    "id": "07356140-ef73-4426-adae-0aef22a57434",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch(Left_Hand)",
                    "type": "Button",
                    "id": "c6deae18-875d-402d-a75c-d2be2d4171a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch(Right_Hand)",
                    "type": "Button",
                    "id": "4d79b605-be3a-4ee2-8002-5bc83cef75e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "46ffd32a-65b1-4c2a-be89-f30432f27cbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef4953eb-a8b8-4e08-9175-9188d2ca7d20",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3515ffd1-20b0-43c9-a3a7-a45223967b97",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "cd144505-980c-42b6-a914-0c0283407e3f",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bdd9e0a5-0e24-489d-9d43-c3c788acde77",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1c396b30-00a6-40b8-8660-7e97a9eb6bd5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5b3ac1e7-7a4e-4f2e-92ae-f43fed9c5947",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2311dceb-df13-4b76-8788-e0bdb0f736e7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Key/Stick)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "66f06ed1-08fa-48dd-9677-fe49dbbde511",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Left_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8d4ed35-5abc-4e4f-afcf-3d99fc818823",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(Right_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard [Arrows]",
                    "id": "c1aadacd-a12e-417a-a1fa-3776071b7576",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "98151641-72db-4efa-8b4c-8a3663cec05d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b8df71b8-f720-4d3d-8478-42e5ad1bfdbe",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a2d04f24-af27-4553-9d62-adef606c7177",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0368fcfc-e360-4999-9f3a-45dc0ce54d31",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b81e212f-80b1-4eb7-a8f8-c64025cbf7b5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0a25883-ef0c-480b-b22a-6a8625fc1e5f",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48dcd8b4-c2b4-4739-80c9-d0c3ef6f16e0",
                    "path": "<XRHMD>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efd7be45-5109-4a9c-b65b-b84960c8b3a4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83857e8e-2fdc-4c1c-be32-0e03691b8891",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact(Left_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c378046f-92be-4944-81a0-faffdac55c42",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact(Right_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abd17c11-bf8e-4504-9020-5e3bbf9f257c",
                    "path": "<XRController>{LeftHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch(Left_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "089ceac8-ec0c-400b-843a-3139a102c1dd",
                    "path": "<XRController>{RightHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch(Right_Hand)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8beb4ac1-828f-406a-9ba2-df2a87eaef72",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DataVisualiserInputMap",
            "id": "079cee4b-f22b-4c94-a5d3-8cba01433f19",
            "actions": [
                {
                    "name": "PanView",
                    "type": "Button",
                    "id": "4bc94a6f-b457-4c8f-bd01-d260d4b017ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomView",
                    "type": "Value",
                    "id": "2c598cad-2a04-41bb-971e-62e7716a3470",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateView",
                    "type": "Button",
                    "id": "984efe57-0aac-4f23-b11c-84b8354d615d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveView",
                    "type": "Value",
                    "id": "6c3cfcc1-ad7e-441a-8e4f-9579458aec63",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "8d65bcf4-3761-4699-8a91-6e060e49c03a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "445a610a-e3a2-4bf2-9b60-084e9a91f6b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Faster",
                    "type": "Button",
                    "id": "913253b9-17fb-44d0-aac9-4ebb43fc4da2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleOrthoPerspective",
                    "type": "Button",
                    "id": "afc62ab7-9102-42b1-9226-db4015123853",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63501955-32a1-416a-8ad0-afb96ec1c0b8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cda228a-1fc4-4e25-971f-cf609eac342a",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b60982d-f45a-4a36-87c1-08961a2259ec",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "105cbe37-f3ef-4dc0-8048-0ea8bb9e3447",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7cd07f35-1bfb-4826-9e22-ba25a6a165a4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e42233e6-3b49-42d6-99d2-59e4087ffdfa",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "909daf4f-c713-485d-82e9-962a1fc76fa6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3836cbf0-0c1d-40b7-9160-83a6335e3aa6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "44aaac00-7784-4af3-882d-680698d16f17",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "2a13321f-9853-479c-9f69-63e9158e971b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "99d9e228-b399-4b30-a80b-21cb4e79d846",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "506f9286-b1fc-4591-bda6-e5516cdf240b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Faster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89eafe7a-769e-45a4-855e-420c582f0731",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleOrthoPerspective",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fe6a8e3-bc31-4ead-a070-a6d25cf03ca2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}